# learn-ffmpeg-mac-ios

./: .gitignore  CMakeLists.txt  build.sh
ffmpeg/prebuilt/android/: Android.mk
src/: main.cpp
