cmake_minimum_required(VERSION 3.0.0)
set(app "learn-ffmpeg-test")
project(${app})

set(arch)
set(isWin FALSE)
set(isMac FALSE)
if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    set(arch win32)
    set(isWin TRUE)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    set(isMac TRUE)
    set(CMAKE_SYSTEM_NAME iOS)
    set(CMAKE_OSX_DEPLOYMENT_TARGET "11.0" CACHE STRING "Minimum OS X deployment version")
    set(CMAKE_XCODE_ATTRIBUTE_SDKROOT iphoneos)
    set(CMAKE_XCODE_ATTRIBUTE_SUPPORTED_PLATFORMS "iphonesimulator iphoneos")
    set(CMAKE_XCODE_ATTRIBUTE_ONLY_ACTIVE_ARCH "YES")
    set(CMAKE_IOS_INSTALL_COMBINED YES)
    set(CMAKE_XCODE_ATTRIBUTE_ENABLE_BITCODE "YES")
    set(CMAKE_XCODE_ATTRIBUTE_BITCODE_GENERATION_MODE bitcode)

    set(arch arm64)
    # set(arch x86_64)
    set(CMAKE_OSX_ARCHITECTURES ${arch})

    foreach(framework CoreVideo CoreAudio VideoToolbox AudioToolbox CoreMedia Security CoreFoundation bz2 z iconv)
    find_library(result NAMES ${framework} NO_CACHE REQUIRED) 
    if(NOT result)
        message(FATAL_ERROR "need ${framework}")
    endif()
    message(STATUS "${framework}: ${result}")
    target_link_libraries(${app}   ${result})
    unset(result)
endforeach()
endif()

set(lib_dir ${CMAKE_CURRENT_LIST_DIR}/ffmpeg/include)
file(GLOB_RECURSE ffmpeg_src ${lib_dir}/*.h )
set(proj_src ${ffmpeg_src} ./src/main.cpp)
add_executable(${app} ${proj_src})

source_group(TREE ${CMAKE_CURRENT_LIST_DIR} FILES ${proj_src})

include_directories(${lib_dir})
set(lib_arch ${CMAKE_CURRENT_LIST_DIR}/ffmpeg/prebuilt/${arch})

set(ffmpeg_libs avcodec avfilter avformat avutil swscale swresample)
if(isWin)
    foreach(lib ${ffmpeg_libs})
        target_link_libraries(${app}   ${lib_arch}/${lib}.lib)
    endforeach()
elseif(isMac)
    foreach(lib ${ffmpeg_libs}) 
        target_link_libraries(${app}   ${lib_arch}/${lib}.a)
    endforeach()
endif()
# link_directories(${lib_arch})
# link_libraries(${ffmpeg_libs})


foreach(source ${proj_src})
    # targetMembership 仅对cpp有效
    set_source_files_properties(${source} PROPERTIES 
        XCODE_FILE_ATTRIBUTES "TargetMembership(${app})"
    )
endforeach()
